fix(dameng): include table and column comments